--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <h1>NEXORA Digital Solutions</h1>
   <h2>Owner: Mohamed Amr</h2>
   <p>Build. Automate. Scale.</p>
-  <a href="editor.html" class="btn">Open Editor</a>
+  <a href="login.html" class="btn">Login</a>
 </div>
 
 </body>
